--- a/service.html
+++ b/service.html
@@ -16,33 +16,31 @@
     <main>
         <div class="servicepage">
             <section class="top_banner">
-                <!-- タスク12 -->
+
             </section>
             <section class="contents tab-content" id="myTabContent">
-                <!-- tab -->
                 <div class="tab">
-                    <ul class="nav nav-tabs mb-3" id="myTab" role="tablist">
+                    <ul class="nav nav-tabs" id="myTab nav" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">創業支援</a>
+                            <a class="nav-link active" id="support-tab" data-toggle="tab" href="#support" role="tab" aria-controls="support" aria-selected="true">創業支援</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">ICT人材育成</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="kozamaker-tab" data-toggle="tab" href="#kozamaker" role="tab" aria-controls="kozamaker" aria-selected="false">Koza Maker</a>
+                            <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Koza Maker</a>
                         </li>
                     </ul>
                 </div>
-                <!-- 創業支援 -->
-                <div class="tab-pane active support-wrap" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane active support-wrap container-fluid" id="support" role="tabpanel" aria-labelledby="support-tab">
                     <div class="about">
                         <p>
                             「起業したいけど、いろいろ不安で一歩が踏みだせない・・・」創業支援コンシェルジュによる個別相談を無料で行っています。スタートアップ・フリーランス・スモールビジネス・社会起業家・社内起業家など様々な属性に合わせたセミナー・ワークショップを実施します。
                         </p>
                     </div>
                     <a class="link-btn">予約申し込み<img class="link-img" src="images/btn-more-normal.png" alt="ボタンの画像"></a>
-                    <div class="cards-wrap">
-                        <div class="card">
+                    <div class="cards-wrap row">
+                        <div class="card col-md-3 col-sm-6 col-12">
                             <img src="images/test01_serviseimg.png" class="card-img-top" alt="serviseのイメージ画像">
                             <div class="card-body">
                                 <h5 class="card-title">スタートアップ</h5>
@@ -52,7 +50,7 @@
                                 <a href="#" class="link-btn card-link">詳細はこちら<img class="link-img" src="images/btn-more-normal.png" alt="ボタンの画像"></a>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card col-md-3 col-sm-6 col-12">
                             <img src="images/test02_serciseimg.png" class="card-img-top" alt="serviseのイメージ画像">
                             <div class="card-body">
                                 <h5 class="card-title">地域ビジネス</h5>
@@ -61,7 +59,7 @@
                                 <a href="#" class="link-btn card-link">詳細はこちら<img class="link-img" src="images/btn-more-normal.png" alt="ボタンの画像"></a>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card col-md-3 col-sm-6 col-12">
                             <img src="images/test03_serviseimg.png" class="card-img-top" alt="serviseのイメージ画像">
                             <div class="card-body">
                                 <h5 class="card-title">飲食ビジネス</h5>
@@ -72,7 +70,7 @@
                                 <a href="#" class="link-btn card-link">詳細はこちら<img class="link-img" src="images/btn-more-normal.png" alt="ボタンの画像"></a>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card col-md-3 col-sm-6 col-12">
                             <img src="images/test04_serviceimg.png" class="card-img-top" alt="serviseのイメージ画像">
                             <div class="card-body">
                                 <h5 class="card-title">ソーシャルビジネス</h5>
@@ -85,59 +83,53 @@
                     <!-- スライダー -->
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                            <p class="backgroud-text">利用者の声</p>
+                            <div class="backgroud-text"><p>利用者の声</p></div>
                             <div class="carousel-item active"> 
                                 <div class="slide-content">
+                                    <div class="user-img"><img src="images/service_comment.png" alt="島袋豊さんの写真"></div>
+                                    <div class="user-name"><p>島袋&emsp; 豊</p></div>
                                     <div class="about-user">
-                                        <img src="images/service_comment.png" alt="島袋豊さんの写真">
-                                        <p>島袋&emsp; 豊</p>
-                                    </div>
-                                    <div class="comment-text">
-                                        <h5>スポーツ居酒屋ドラキン</h5>
+                                        <p class="belong">スポーツ居酒屋ドラキン</p>
                                         <p class="category">支援内容：ブランディング・店舗内装</p>
-                                        <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                     </div>
+                                    <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                 </div>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item"> 
                                 <div class="slide-content">
+                                    <div class="user-img"><img src="images/service_comment.png" alt="島袋豊さんの写真"></div>
+                                    <div class="user-name"><p>島袋&emsp; 豊</p></div>
                                     <div class="about-user">
-                                        <img src="images/service_comment.png" alt="島袋豊さんの写真">
-                                        <p>島袋&emsp; 豊</p>
-                                    </div>
-                                    <div class="comment-text">
-                                        <h5>スポーツ居酒屋ドラキン</h5>
+                                        <p class="belong">スポーツ居酒屋ドラキン</p>
                                         <p class="category">支援内容：ブランディング・店舗内装</p>
-                                        <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                     </div>
+                                    <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                 </div>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item"> 
                                 <div class="slide-content">
+                                    <div class="user-img"><img src="images/service_comment.png" alt="島袋豊さんの写真"></div>
+                                    <div class="user-name"><p>島袋&emsp; 豊</p></div>
                                     <div class="about-user">
-                                        <img src="images/service_comment.png" alt="島袋豊さんの写真">
-                                        <p>島袋&emsp; 豊</p>
-                                    </div>
-                                    <div class="comment-text">
-                                        <h5>スポーツ居酒屋ドラキン</h5>
+                                        <p class="belong">スポーツ居酒屋ドラキン</p>
                                         <p class="category">支援内容：ブランディング・店舗内装</p>
-                                        <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                     </div>
+                                    <p class="support-detail">Lagoonでデザインを担当するスタッフのアドバイスのもと、スポーツ居酒屋ドラキンのコンセプトを表す内装を決定し、ブランディングに注力した。</p>
                                 </div>
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="z-index: 100;">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="z-index: 100;">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    アイウエオ
+                    <!-- ICT人材育成のページ -->
                 </div>
             </section>
             <!-- ここから上にタスク13 -->
@@ -147,6 +139,7 @@
         <!-- タスク１０ -->
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
