画像差し替えた

--- a/service.html
+++ b/service.html
@@ -19,9 +19,8 @@
                 <img src="images/pic-services-desktop@3x.png" class="top_banner_img_pc" alt="サービスのトップ画像">
                 <img src="images/pic-services-desktop@2x.png" class="top_banner_img_tb" alt="サービスのトップ画像">
                 <img src="images/pic-services-desktop.png" class="top_banner_img_sp" alt="サービスのトップ画像">
-                <!-- <img src="images/pic-space-desktop.png" class="top_banner_img_sp" alt=""> -->
                 <div class="top_banner_spaceTitle">
-                    <h2>施設概要</h2>
+                    <h2>サービス</h2>
                 </div>
             </section>
             <section class="contents tab-content" id="myTabContent">
