topの画像/全体を整えた

--- a/service.html
+++ b/service.html
@@ -85,7 +85,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- スライダー -->
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="backgroud-text"><p>利用者の声</p></div>
@@ -135,6 +134,9 @@
                 </div>
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <!-- ICT人材育成のページ -->
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <!-- Kozamakerのページ -->
                 </div>
             </section>
             <!-- ここから上にタスク13 -->
