--- a/newspage.html
+++ b/newspage.html
@@ -28,16 +28,16 @@
                 <!-- nav_tabs_simple.html -->
                 <ul class="nav nav-tabs"> 
                     <li class="nav-item">
-                    <a href="#tab1" class="nav-link active" data-toggle="tab">タブ1</a>
+                    <a href="#tab1" class="nav-link active" data-toggle="tab">All</a>
                     </li>
                     <li class="nav-item">
-                    <a href="#tab2" class="nav-link" data-toggle="tab">タブ2</a>
+                    <a href="#tab2" class="nav-link" data-toggle="tab">広告</a>
                     </li>
                     <li class="nav-item">
-                    <a href="#tab3" class="nav-link" data-toggle="tab">タブ3</a>
+                    <a href="#tab3" class="nav-link" data-toggle="tab">更新</a>
                     </li>
                     <li class="nav-item">
-                    <a href="#tab4" class="nav-link" data-toggle="tab">タブ4</a>
+                    <a href="#tab4" class="nav-link" data-toggle="tab">新聞</a>
                     </li>
                 </ul>
                 <!-- nav_tabs_simple.html -->
