style.cssとstyle.css.mapを消そうとしても消えなかった

--- a/newspage.html
+++ b/newspage.html
@@ -16,9 +16,9 @@
     <main>
         <div class="newspage">
             <section class="news_banner">
-                <img src="images/pic-space-desktop.png" class="top_banner_img_pc" alt="">
-                <img src="images/pic-space-tablet.png" class="top_banner_img_tb" alt="">
-                <img src="images/pic-space-mobile.png" class="top_banner_img_sp" alt="">
+                <img src="images/pic-info-desktop.png" class="top_banner_img_pc" alt="">
+                <img src="images/pic-info-desktop@2x.png" class="top_banner_img_tb" alt="">
+                <img src="images/pic-info-mobile@3x.jpg" class="top_banner_img_sp" alt="">
                 <div class="title">
                     <h2>新着情報</h2>
                 </div>
